--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -125,9 +125,9 @@
 <!ENTITY Ctr_altoptionswh	"Wusokosć">
 <!ENTITY Ctr_altoptionsi	"Simulěrowane wokno nastajenjow wěcej njejo dialog, ale 'wobglědowakowe wokno', źož wšykne symbolowe rědki su schowane. Funkcija 'Aktualny bok wužywaś' pśidawa jano URL bokow, kótarež wócynjaju se w aktualnem woknje, kótarež jo w toś tom paźe 'about:preferences'. 'Tłocašk symboloweje rědki Nastajenja' wuměnja se pśez nowy, aby se nastajenja we woknje wócynili.">
 <!ENTITY Ctr_options_rem	"Kategoriju se spomnjeś, kótaraž jo se ako slědna wubrała">
-<!ENTITY Ctr_aboutpages		"General 'about:' pages: alternative appearance">
+<!ENTITY Ctr_aboutpages		"Powšykne boki 'about:': alternatiwny naglěd">
 <!ENTITY Ctr_svgfilters		"SVG-barwy za symbole tłocaškow symbolowych rědkow">
-<!ENTITY Ctr_wincontrols	"Pśesuwajobne wóźeńske elementy połneje wobrazowki">
+<!ENTITY Ctr_wincontrols	"Pśesuwajobne woknowe wóźeńske elementy połneje wobrazowki">
 <!ENTITY Ctr_puibuttonsep	"Źěleńska smužka menijowego tłocaška">
 <!ENTITY Ctr_puibut_no_sep	"Schowana">
 <!ENTITY Ctr_puibut_l_sep	"Nalěwo">
@@ -187,13 +187,13 @@
 <!ENTITY Ctr_bmbutton		"Tłocašk menija cytańskich znamjenjow">
 <!ENTITY Ctr_hiderecentbm	"Wuskokujuce wokno cytańskich znamjenjow: Njedawno pśidany cytańske znamjenja schowaś">
 <!ENTITY Ctr_hideeditbm		"Gwězdku cytańskich znamjenjow: Wuskokujuce wokno schowaś (jolic bok njejo ako cytańske znamje skłaźony)">
-<!ENTITY Ctr_oldplacesbut	"Bookmark items and folders on toolbar: old appearance">
+<!ENTITY Ctr_oldplacesbut	"Zapiski a zarědniki na symbolowej rědce: stary naglěd">
 <!ENTITY Ctr_bmbutpanelm	"Wuskokujucy meni: Naglěd menijowego wuskokujucego wokna">
-<!ENTITY Ctr_bmbunsortbm	"Wuskokujucy meni: Meni 'Njesortěrowane cytańske znamjenja'">
+<!ENTITY Ctr_bmbunsortbm	"Wuskokujucy meni: Meni 'Druge cytańske znamjenja'">
 <!ENTITY Ctr_bmbunsortbm2	"Meni nad cytańskimi znamjenjami">
 <!ENTITY Ctr_bmbviewbmsb	"Wuskokujucy meni: 'Bocnicu cytańskich znamjenjow pokazaś' pokazaś">
 <!ENTITY Ctr_bmbviewbmtb	"Wuskokujucy meni: 'Rědku cytańskich znamjenjow pokazaś' pokazaś">
-<!ENTITY Ctr_bmbnounsort	"Wuskokujucy meni: 'Njesortěrowane cytańske znamjenja' schowaś">
+<!ENTITY Ctr_bmbnounsort	"Wuskokujucy meni: 'Druge cytańske znamjenja' schowaś">
 <!ENTITY Ctr_bmbutnotext	"Tekst na rědce cytańskich znamjenjow schowaś">
 <!ENTITY Ctr_skipprintpr	"Śišćarski tłocašk: Śišćarski pśeglěd pśeskócyś">
 <!ENTITY Ctr_tbconmenu		"Kontekstowy meni symboloweje rědki: 'Do menija pśesunuś', 'ze symboloweje rědki wótpóraś', 'wšykne rejtaki znowego zacytaś/ako cytańske znamje składowaś' a 'rejtark zacyniś anulěrowaś' schowaś">
@@ -213,7 +213,7 @@
 <!ENTITY Ctr_navthrobber2	"URL pśidaś abo prozne wóstajiś">
 <!ENTITY Ctr_anewtaburl		"Bokowy URL nowego rejtarka">
 <!ENTITY Ctr_anewtaburlcb	"URL swójskego boka nowego rejtarka (standard: 'about:newtab')">
-<!ENTITY Ctr_anewtaburlpcb	"Custom private new tab page url (default: 'about:privatebrowsing')">
+<!ENTITY Ctr_anewtaburlpcb	"Swójski URL boka nowego rejtarka priwatnego modusa (standard: 'about:privatebrowsing')">
 
 <!ENTITY Ctr_tab_tf_info1	"Barwowe mjenja, heksadecimalne kody, rgb(a)- a hsl(a)-gódnoty se pódpěraju.">
 <!ENTITY Ctr_tab_tf_info2	"Zapódaśa se njepśespytuju!">
@@ -250,7 +250,7 @@
 <!ENTITY Ctr_urlbardropm	"Tłocašk špica šypki do slědneje móžneje pozicije pśesunuś">
 <!ENTITY Ctr_urlbardropm2	"Tłocašk špica šypki pśecej pokazaś">
 <!ENTITY Ctr_altreaderico	"Alternatiwne 'cytakowe' symbole">
-<!ENTITY Ctr_hideurlzoom	"Hide zoom button (if present)">
+<!ENTITY Ctr_hideurlzoom	"Skalěrowański tłocašk schowaś (jolic eksistěrujo)">
 <!ENTITY Ctr_hideprbutton	"Zdźěleński symbol schowaś, gaž wuskokujuce wokno se blokěrujo">
 <!ENTITY Ctr_locsearchbw10	"Wusokosć adresowych a pytańskich pólow reducěrowaś (eksperimentelne)">
 <!ENTITY Ctr_urlbar_ib		"Tłocašk sedłoweje identity">
@@ -278,7 +278,7 @@
 <!ENTITY Ctr_autocompl_sep	"Źěleńsku liniju mjazy wuslědkami pokazaś">
 <!ENTITY Ctr_urlbar_uc		"Funkciju 'zjadnośone awotwudopołnjenje' znjemóžniś">
 <!ENTITY Ctr_lbsugresi		"Limit wusokosći znjemóžniś">
-<!ENTITY Ctr_cresultshcb	"Custom height limit: ">
+<!ENTITY Ctr_cresultshcb	"Swójski limit wusokosći: ">
 <!ENTITY Ctr_lbsugres		"Licba wuslědkow">
 <!ENTITY Ctr_lbsbradius		"Swójski ramikowy wokłon za adresowe pólo a pytańske polo">
 
@@ -304,7 +304,7 @@
 <!ENTITY Ctr_hidetbwot		"Rejtarkowu rědku z jano jadnym rejtarkom schowaś">
 <!ENTITY Ctr_hidetbwote		"Wokomuźenje pśi startowanju reducěrowaś">
 <!ENTITY Ctr_hidetbwote_i	"To by mógło brachi na rejtarkowej rědce zawinowaś">
-<!ENTITY Ctr_hidetbwote2	"Automatically adjust titlebar space">
+<!ENTITY Ctr_hidetbwote2	"Prozny rum titelneje rědki awtomatiski pśiměriś">
 <!ENTITY Ctr_notabfog		"Slězynowu młu wótpóraś (Windows AeroGlass / Win8)">
 <!ENTITY Ctr_notabbg		"Slězynowu barwu wótpóraś (Windows AeroGlass / Win8)">
 <!ENTITY Ctr_hightabpos		"Mjazyrum wušej symboloweje rědki reducěrowaś (jolic móžno)">
@@ -373,8 +373,8 @@
 <!ENTITY Ctr_e_findbarhl	"Wuzwignjenje pytańskego póla">
 <!ENTITY Ctr_fx50findbarhl	"Gaž se toś te nastajenja znjemóžniju, se 'wuzwignjeńske' funkcije wótpóraju.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
-<!ENTITY Ctr_e_oneoffsearch	"Autocomplete popups search selection">
-<!ENTITY Ctr_fx51OOSeach	"Unchecking this preference removes search selection from location bars autocomplete popup.">
+<!ENTITY Ctr_e_oneoffsearch	"Pytański wuběrk awtowudopołnjeńskich wuskokujucych woknow">
+<!ENTITY Ctr_fx51OOSeach	"Gaž znjemóžnjaśo toś to nastajenje, se pytański wuběrk awtowudopołnjeńskego wuskokujucego wokna adresowego póla wótwónoźijo.">
 
 
 <!ENTITY Ctr_pw_settings	"Nastajenja">
@@ -401,7 +401,7 @@
 <!ENTITY goCmd.label					"Start">
 <!ENTITY Ctr_menu_restart.label			"Znowego startowaś">
 <!ENTITY Ctr_restartapp					"Znowego startowaś w meniju '&brandShortName;' a w meniju Dataja pokazaś">
-<!ENTITY Ctr_ctrnewinv					"Underline new options for current &brandShortName; version">
+<!ENTITY Ctr_ctrnewinv					"Nowe nastajenja za aktualnu wersiju &brandShortName; pódšmarnuś">
 
 <!ENTITY Ctr_openInCurrentTab			"Zapódaśa w aktualnem rejtarku wócyniś">
 <!ENTITY Ctr_openInNewTab				"Zapódaśa w nowem rejtarku wócyniś">
