--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -125,9 +125,9 @@
 <!ENTITY Ctr_altoptionswh	"Wysokosć">
 <!ENTITY Ctr_altoptionsi	"Simulowane wokno nastajenjow dialog hižo njeje, ale 'wobhladowakowe wokno', hdźež wšě symbolowe lajsty su schowane. Funkcija 'Aktualnu stronu wužiwać' přidawa jenož URL stronow, kotrež so w aktualnym woknje wočinjeja, kotrež je w tutym padźe jenož 'about:preferences'. 'Tłóčatko symboloweje lajsty Nastajenja' so přez nowe wuměnja, zo bychu so nastajenja we woknje wočinili.">
 <!ENTITY Ctr_options_rem	"Kategoriju sej spomjatkować, kotraž je so jako poslednja wubrała">
-<!ENTITY Ctr_aboutpages		"General 'about:' pages: alternative appearance">
+<!ENTITY Ctr_aboutpages		"Powšitkowne strony 'about:': alternatiwny napohlad">
 <!ENTITY Ctr_svgfilters		"SVG-barby za symbole standardnych tłóčatkow">
-<!ENTITY Ctr_wincontrols	"Přesuwajomne wodźenske elementy połneje wobrazowki">
+<!ENTITY Ctr_wincontrols	"Přesuwajomne woknowe wodźenske elementy połneje wobrazowki">
 <!ENTITY Ctr_puibuttonsep	"Dźělatko menijoweho tłóčatka">
 <!ENTITY Ctr_puibut_no_sep	"Schowane">
 <!ENTITY Ctr_puibut_l_sep	"Nalěwo">
@@ -187,13 +187,13 @@
 <!ENTITY Ctr_bmbutton		"Tłóčatko menija zapołožkow">
 <!ENTITY Ctr_hiderecentbm	"Wuskakowace wokno zapołožkow: Njedawo přidate zapołožki schować">
 <!ENTITY Ctr_hideeditbm		"Hwěžka zapołožkow: Wuskakowace wokno schować (jeli strona jako zapołožka składowana njeje)">
-<!ENTITY Ctr_oldplacesbut	"Bookmark items and folders on toolbar: old appearance">
+<!ENTITY Ctr_oldplacesbut	"Zapiski a rjadowaki zapołožkow na symbolowej lajsće: stary napohlad">
 <!ENTITY Ctr_bmbutpanelm	"Wuskakowacy meni: Napohlad wuskakowaceho menija">
-<!ENTITY Ctr_bmbunsortbm	"Wuskakowacy meni: Meni 'Njesortěrowane zapołožki'">
+<!ENTITY Ctr_bmbunsortbm	"Wuskakowacy meni: Meni Druhe zapołožki'">
 <!ENTITY Ctr_bmbunsortbm2	"Meni nad zapołožkami">
 <!ENTITY Ctr_bmbviewbmsb	"Wuskakowacy meni: 'Bóčnicu zapołožkow pokazać' pokazać">
 <!ENTITY Ctr_bmbviewbmtb	"Wuskakowacy meni: 'Lajstu zapołožkow pokazać' pokazać">
-<!ENTITY Ctr_bmbnounsort	"Wuskakowcy meni: 'Njesortěrowane zapołožki' schować">
+<!ENTITY Ctr_bmbnounsort	"Wuskakowcy meni: 'Druhe zapołožki' schować">
 <!ENTITY Ctr_bmbutnotext	"Tekst na lajśce zapołožkow schować">
 <!ENTITY Ctr_skipprintpr	"Ćišćerske tłóčatko: Ćišćerski přehlad přeskočić">
 <!ENTITY Ctr_tbconmenu		"Kontekstowy meni symboloweje lajsty: 'Do menija přesunyć', 'Ze symboloweje lajsty wotstronić', 'Wšě rajtarki znowa začitać/jako zapołožki składować' a 'Začinjenje rajtarka cofnyć' schować">
@@ -213,7 +213,7 @@
 <!ENTITY Ctr_navthrobber2	"URL přidać abo prózdne wostajić">
 <!ENTITY Ctr_anewtaburl		"URL strony noweho rajtarka">
 <!ENTITY Ctr_anewtaburlcb	"URL swójskeje strony noweho rajtarka (standard: 'about:newtab')">
-<!ENTITY Ctr_anewtaburlpcb	"Custom private new tab page url (default: 'about:privatebrowsing')">
+<!ENTITY Ctr_anewtaburlpcb	"Swójski URL strony noweho rajtarka priwatneho modusa (standard: 'about:privatebrowsing')">
 
 <!ENTITY Ctr_tab_tf_info1	"Barbne mjena, heksadecimalne kody, rgb(a)- a hsl(a)-hódnoty so podpěruja.">
 <!ENTITY Ctr_tab_tf_info2	"Zapodaća so njepřepruwuja!">
@@ -250,7 +250,7 @@
 <!ENTITY Ctr_urlbardropm	"Tłóčatko šipkoweho kónčka do poslednjeje móžneje pozicije přesunyć">
 <!ENTITY Ctr_urlbardropm2	"Tłóčatko šipkoweho kónčka přeco pokazać">
 <!ENTITY Ctr_altreaderico	"Alternatiwne 'čitakowe' symbole">
-<!ENTITY Ctr_hideurlzoom	"Hide zoom button (if present)">
+<!ENTITY Ctr_hideurlzoom	"Skalowanske tłóčatko schować (jeli eksistuje)">
 <!ENTITY Ctr_hideprbutton	"Zdźělenski symbol schować, hdyž so wuskakowace wokno blokuje">
 <!ENTITY Ctr_locsearchbw10	"Wysokosć adresowych a pytanskich polow redukować (eksperimentelne)">
 <!ENTITY Ctr_urlbar_ib		"Tłóčatko sydłoweje identity">
@@ -278,7 +278,7 @@
 <!ENTITY Ctr_autocompl_sep	"Dźělatko mjez wuslědkami pokazać">
 <!ENTITY Ctr_urlbar_uc		"Funkciju 'Zjednoćene awtowudospołnjenje' znjemóžnić">
 <!ENTITY Ctr_lbsugresi		"Limit wysokosće znjemóžnić">
-<!ENTITY Ctr_cresultshcb	"Custom height limit: ">
+<!ENTITY Ctr_cresultshcb	"Swójski limit wysokosće: ">
 <!ENTITY Ctr_lbsugres		"Ličba wuslědkow">
 <!ENTITY Ctr_lbsbradius		"Swójska ramikowa křiwizna za adresowe polo a pytanske polo">
 
@@ -304,7 +304,7 @@
 <!ENTITY Ctr_hidetbwot		"Rajtarkowu lajstu z jenož jednym rajtarkom schować">
 <!ENTITY Ctr_hidetbwote		"Komdźenje chowanja při startowanju redukować">
 <!ENTITY Ctr_hidetbwote_i	"To móhło brachi na rajtarkowej lajsće zawinować">
-<!ENTITY Ctr_hidetbwote2	"Automatically adjust titlebar space">
+<!ENTITY Ctr_hidetbwote2	"Mjezotu titulneje lajsty awtomatisce přiměrić">
 <!ENTITY Ctr_notabfog		"Pozadkowu młu wotstronić (Windows AeroGlass / Win8)">
 <!ENTITY Ctr_notabbg		"Pozadkowu barbu wotstronić (Windows AeroGlass / Win8)">
 <!ENTITY Ctr_hightabpos		"Mjezeru wyše symboloweje lajsty redukować (jeli móžno)">
@@ -373,8 +373,8 @@
 <!ENTITY Ctr_e_findbarhl	"Wuzběhnjenje pytanskeho pola">
 <!ENTITY Ctr_fx50findbarhl	"Hdyž so tute nastajenja znjemóžnja, so 'wuzběhnjenske' funkcije wotstronja.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
-<!ENTITY Ctr_e_oneoffsearch	"Autocomplete popups search selection">
-<!ENTITY Ctr_fx51OOSeach	"Unchecking this preference removes search selection from location bars autocomplete popup.">
+<!ENTITY Ctr_e_oneoffsearch	"Pytanski wuběr we wudospołnjowanskim wuskakowacym woknje">
+<!ENTITY Ctr_fx51OOSeach	"Hdyž tute nastajenje znjemóžnjeće, so pytanski wuběr awtowudospołnjowaceho wuskakowaceho wokna adresoweho pola wotstronja.">
 
 
 <!ENTITY Ctr_pw_settings	"Nastajenja">
@@ -401,7 +401,7 @@
 <!ENTITY goCmd.label					"Start">
 <!ENTITY Ctr_menu_restart.label			"Znowa startować">
 <!ENTITY Ctr_restartapp					"Znowa startować w meniju '&brandShortName;' a w meniju 'Dataja' pokazać">
-<!ENTITY Ctr_ctrnewinv					"Underline new options for current &brandShortName; version">
+<!ENTITY Ctr_ctrnewinv					"Nowe wersije za aktualnu wersiju &brandShortName; podšmórnyć">
 
 <!ENTITY Ctr_openInCurrentTab			"Zapodaća w aktualnym rajtarku wočinić">
 <!ENTITY Ctr_openInNewTab				"Zapodaća w nowym rajtarku wočinić">
