--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -187,7 +187,7 @@
 <!ENTITY Ctr_bmbutton		"Przycisk menu zakładek">
 <!ENTITY Ctr_hiderecentbm	"Menu podręczne zakładek: ukryj ostatnio dodane zakładki">
 <!ENTITY Ctr_hideeditbm		"Gwiazdka zakładek: ukryj menu podręczne (jeżeli zakładka nie jest dodana do strony)">
-<!ENTITY Ctr_oldplacesbut	"Zakładki na pasku: stary wygląd">
+<!ENTITY Ctr_oldplacesbut	"Elementy i foldery zakładek na pasku: stary wygląd">
 <!ENTITY Ctr_bmbutpanelm	"Menu podręczne: wygląd menu panelu">
 <!ENTITY Ctr_bmbunsortbm	"Menu podręczne: podmenu 'Pozostałe zakładki'">
 <!ENTITY Ctr_bmbunsortbm2	"Menu ponad zakładkami">
@@ -250,7 +250,7 @@
 <!ENTITY Ctr_urlbardropm	"Przenieś znacznik rozwinięcia na ostatnią możliwą pozycję">
 <!ENTITY Ctr_urlbardropm2	"Ustaw znacznik rozwinięcia jako zawsze widoczny">
 <!ENTITY Ctr_altreaderico	"Alternatywne ikony 'Popraw czytelność'">
-<!ENTITY Ctr_hideurlzoom	"Hide zoom button (if present)">
+<!ENTITY Ctr_hideurlzoom	"Ukryj przycisk powiększenia (jeżeli obecny)">
 <!ENTITY Ctr_hideprbutton	"Ukryj ikonę powiadomienia, gdy wyskakujące okno zostanie zablokowane">
 <!ENTITY Ctr_locsearchbw10	"Zredukuj wysokość paska adresu i wyszukiwania (eksperymentalne)">
 <!ENTITY Ctr_urlbar_ib		"Przycisk tożsamości witryny (pole tożsamości)">
@@ -374,7 +374,7 @@
 <!ENTITY Ctr_fx50findbarhl	"Odznaczenie tych ustawień usuwa funkcje 'podświetlania' paska wyszukiwania.">
 <!ENTITY Ctr_e_flyweb		"FlyWeb">
 <!ENTITY Ctr_e_oneoffsearch	"Wybór wyszukiwarki w menu podręcznym autouzupełniania">
-<!ENTITY Ctr_fx51OOSeach	"Odznaczenie tego ustawienia usuwa wybór wyszukiwarki z menu podręcznego paska adresu.">
+<!ENTITY Ctr_fx51OOSeach	"Odznaczenie tego ustawienia usuwa wybór wyszukiwarki z menu podręcznego autouzupełniania paska adresu.">
 
 
 <!ENTITY Ctr_pw_settings	"Ustawienia">
