Update to Slovenian translation

--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -125,7 +125,7 @@
 <!ENTITY Ctr_altoptionswh	"Višina">
 <!ENTITY Ctr_altoptionsi	"Simulirano okno možnosti ni več pogovorno okno, ampak 'okno brskalnika' s skritimi orodnimi vrsticami. Značilnost 'Uporabi trenutno stran' samo doda v trenutnem oknu odprte URL-je strani, ki je v tem primeru samo 'about:preferences'. Gumb orodne vrstice 'možnosti' se nadomesti z novim, da se lahko možnosti odprejo v oknu.">
 <!ENTITY Ctr_options_rem	"Zapomni si nazadnje izbrano kategorijo">
-<!ENTITY Ctr_aboutpages		"General 'about:' pages: alternative appearance">
+<!ENTITY Ctr_aboutpages		"Splošne strani 'about:': nadomestni videz">
 <!ENTITY Ctr_svgfilters		"Barve SVG za privzete ikone gumbov orodne vrstice">
 <!ENTITY Ctr_wincontrols	"Premakljive nadzorne tipke celozaslonskega okna">
 <!ENTITY Ctr_puibuttonsep	"Ločilo menijskega gumba">
@@ -187,7 +187,7 @@
 <!ENTITY Ctr_bmbutton		"Gumb menija zaznamkov">
 <!ENTITY Ctr_hiderecentbm	"Pojavno okno zaznamkov: skrij nedavno dodane zaznamke">
 <!ENTITY Ctr_hideeditbm		"Zvezdica za zaznamke: skrij pojavno okno (če stran ni dodana med zaznamke)">
-<!ENTITY Ctr_oldplacesbut	"Bookmark items and folders on toolbar: old appearance">
+<!ENTITY Ctr_oldplacesbut	"Dodajanje predmetov in map med zaznamke iz orodne vrstice: star videz">
 <!ENTITY Ctr_bmbutpanelm	"Pojavna okna: videz ploščastega menija">
 <!ENTITY Ctr_bmbunsortbm	"Pojavna okna: podmeni 'Nerazvrščeni zaznamki'">
 <!ENTITY Ctr_bmbunsortbm2	"Meni nad zaznamki">
@@ -250,7 +250,7 @@
 <!ENTITY Ctr_urlbardropm	"Premakni spustno puščico na zadnji možni položaj">
 <!ENTITY Ctr_urlbardropm2	"Naj bo spustna puščica vedno vidna">
 <!ENTITY Ctr_altreaderico	"Nadomestne ikone 'Bralnika'">
-<!ENTITY Ctr_hideurlzoom	"Hide zoom button (if present)">
+<!ENTITY Ctr_hideurlzoom	"Skrij gumb za povečavo (če je prisoten)">
 <!ENTITY Ctr_hideprbutton	"Skrij ikono obvestil ob blokiranju pojavnega okna">
 <!ENTITY Ctr_locsearchbw10	"Zmanjšaj višino naslovne in iskalne vrstice (preskusno)">
 <!ENTITY Ctr_urlbar_ib		"Gumb identitete strani (polje identitete)">
